Updated organization route Feat: - Updated organization route schema.
